[gd_scene load_steps=46 format=2]

[ext_resource path="res://Scenes/Conversation.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Main.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Elephant.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/arrow_sprite.png" type="Texture" id=4]
[ext_resource path="res://Assets/cross_sprite.png" type="Texture" id=5]

[sub_resource type="DynamicFontData" id=5]
font_path = "res://Assets/Gluten-Regular.ttf"

[sub_resource type="DynamicFont" id=6]
size = 40
font_data = SubResource( 5 )

[sub_resource type="DynamicFontData" id=9]
font_path = "res://Assets/Gluten-Regular.ttf"

[sub_resource type="DynamicFont" id=10]
size = 20
font_data = SubResource( 9 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 5 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 5 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 5 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 5 )
region = Rect2( 0, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 5 )
region = Rect2( 64, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 5 )
region = Rect2( 128, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 5 )
region = Rect2( 192, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 5 )
region = Rect2( 0, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 5 )
region = Rect2( 64, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 5 )
region = Rect2( 128, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 5 )
region = Rect2( 192, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 5 )
region = Rect2( 0, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 5 )
region = Rect2( 64, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 5 )
region = Rect2( 128, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 5 )
region = Rect2( 192, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 5 )
region = Rect2( 0, 256, 64, 64 )

[sub_resource type="SpriteFrames" id=40]
animations = [ {
"frames": [ SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ) ],
"loop": false,
"name": "default",
"speed": 12.0
} ]

[sub_resource type="DynamicFontData" id=7]
font_path = "res://Assets/Gluten-Regular.ttf"

[sub_resource type="DynamicFont" id=8]
size = 30
font_data = SubResource( 7 )

[sub_resource type="DynamicFontData" id=11]
font_path = "res://Assets/Gluten-Regular.ttf"

[sub_resource type="DynamicFont" id=12]
size = 70
outline_size = 10
outline_color = Color( 0.305882, 0.27451, 0.113725, 1 )
font_data = SubResource( 11 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://Assets/Gluten-Regular.ttf"

[sub_resource type="DynamicFont" id=4]
size = 20
font_data = SubResource( 3 )

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Assets/Gluten-Regular.ttf"

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = SubResource( 1 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 4 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 4 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 4 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 4 )
region = Rect2( 32, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 4 )
region = Rect2( 64, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 4 )
region = Rect2( 0, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 4 )
region = Rect2( 32, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 4 )
region = Rect2( 64, 64, 32, 32 )

[sub_resource type="SpriteFrames" id=22]
animations = [ {
"frames": [ SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ) ],
"loop": true,
"name": "default",
"speed": 20.0
} ]

[node name="Main" type="Node2D"]
script = ExtResource( 2 )

[node name="Elephant" parent="." instance=ExtResource( 3 )]
position = Vector2( 508, 263 )

[node name="Conversation" parent="." instance=ExtResource( 1 )]
position = Vector2( 505, 287 )

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="ScoreUI" type="Control" parent="Control"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Score" type="Label" parent="Control/ScoreUI"]
margin_bottom = 36.0
grow_horizontal = 2
grow_vertical = 2
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 6 )
align = 1
valign = 1

[node name="ScoreLabel" type="Label" parent="Control/ScoreUI"]
margin_left = -31.0
margin_top = -30.0
margin_right = 31.0
margin_bottom = -12.0
grow_horizontal = 2
grow_vertical = 2
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 10 )
text = "POINTS"
align = 1
valign = 1

[node name="CrossSprite" type="AnimatedSprite" parent="Control/ScoreUI"]
visible = false
modulate = Color( 0.886275, 0.0862745, 0.0862745, 1 )
scale = Vector2( 2, 2 )
frames = SubResource( 40 )

[node name="GameOverUI" type="Control" parent="Control"]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="TryAgainButton" type="Button" parent="Control/GameOverUI"]
margin_left = -80.0
margin_top = 12.0
margin_right = 80.0
margin_bottom = 46.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 8 )
text = "Try Again"

[node name="Label" type="Label" parent="Control/GameOverUI"]
margin_left = -191.0
margin_top = -72.0
margin_right = 191.0
margin_bottom = -9.0
grow_horizontal = 2
grow_vertical = 2
custom_colors/font_color = Color( 1, 0.647059, 0.14902, 1 )
custom_fonts/font = SubResource( 12 )
text = "Game Over"
align = 1
valign = 1

[node name="InputUI" type="Control" parent="Control"]

[node name="LineEdit" type="LineEdit" parent="Control/InputUI"]
margin_left = -100.0
margin_top = -26.0
margin_right = 100.0
margin_bottom = 9.0
custom_fonts/font = SubResource( 4 )
align = 1
placeholder_text = "enter topic here"

[node name="SubmitButton" type="Button" parent="Control/InputUI"]
visible = false
margin_left = -105.0
margin_right = 105.0
margin_bottom = 34.0
custom_fonts/font = SubResource( 2 )
text = "Change Topic"

[node name="ArrowSprite1" type="AnimatedSprite" parent="Control/InputUI"]
visible = false
modulate = Color( 1, 0.647059, 0.0352941, 1 )
position = Vector2( -126, -9 )
frames = SubResource( 22 )

[node name="ArrowSprite2" type="AnimatedSprite" parent="Control/InputUI"]
visible = false
modulate = Color( 1, 0.647059, 0.0352941, 1 )
position = Vector2( 126, -9 )
frames = SubResource( 22 )
flip_h = true

[connection signal="on_conversation_dying" from="Conversation" to="." method="_on_Conversation_on_conversation_dying"]
[connection signal="on_conversation_finished" from="Conversation" to="." method="_on_Conversation_on_conversation_finished"]
[connection signal="on_topic_change" from="Conversation" to="." method="_on_Conversation_on_topic_change"]
[connection signal="animation_finished" from="Control/ScoreUI/CrossSprite" to="." method="_on_CrossSprite_animation_finished"]
[connection signal="pressed" from="Control/GameOverUI/TryAgainButton" to="." method="_on_TryAgainButton_pressed"]
[connection signal="text_entered" from="Control/InputUI/LineEdit" to="." method="_on_LineEdit_text_entered"]
[connection signal="button_down" from="Control/InputUI/SubmitButton" to="." method="_on_SubmitButton_button_down"]
